syntax = "proto3";
package org.phenopackets.schema.v1;

import "org/phenopackets/schema/v1/core/base.proto";

// Should be a pre-evaluated phenotype description of an individual
message PhenoPacket {
    string id = 1;
    string title = 2;
    string description = 3;
    org.phenopackets.schema.v1.core.Individual individual = 5;
    repeated org.phenopackets.schema.v1.core.Variant variants = 7;
    repeated org.phenopackets.schema.v1.core.Disease diseases = 8;
    org.phenopackets.schema.v1.core.MetaData metaData = 9;
}